--- a/Projeto Alta Fidelidade Javascript/style.css
+++ b/Projeto Alta Fidelidade Javascript/style.css
@@ -1,48 +1,60 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
+}
+
+html, body{
+    width: 100%;
+    height: auto;
+    font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.header {
-    
+.name__info{
+    width: 100%;
+    height: 20px;
+    border-bottom: 1px solid black;
 }
 
-.header_links {
-    list-style-type: none;
-    overflow: hidden;
-    width: 429px;
-    height: 40px;
-    border-top: 1px solid #8E8E8E;
-    border-bottom: 1px solid #8E8E8E;
-    border-left: 1px solid #8E8E8E;
+
+.title__cart{
+    width: 30px;
+    height: 20px;
+    display: block;
+    float: left;
+    margin-left: 100px;
 }
 
-.header_links li {
-    display: inline-block;
-    padding: 10px;
-    border-right:  1px solid #8E8E8E;
+.title__cart--modify{
+    margin-right: 190px;
+    margin-left: 85px;
 }
 
-.header_links li a {
-    
-    text-decoration: none;
-    text-align: center;
-    color: #8E8E8E;
+.clear{
+    clear: both;
 }
 
-li a:hover {
-    background-color: #BF4E79;
-    color: white;
+.product{
+    width: 100%;
+    height: 100px;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border-bottom: 1px solid black;
 }
 
-.items_order {
-    height: 60px;
-    padding: 10px;
-}
-
-.table_title {
+.product__img{
+    width: 50px;
     height: 50px;
-    color: #8E8E8E;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+.product__name{
+    width: auto;
+    height: auto;
+    display: block;
 }
