--- a/Projeto jsnotes/style.css
+++ b/Projeto jsnotes/style.css
@@ -4,11 +4,33 @@
     box-sizing: border-box;
 }
 
+body, html {
+    width: 100%;
+    height: 100%;
+}
+
+.main {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 .formulario {
     width: 350px;
-
+    margin: 10px;
+    color: #7B8B9D;
 }
 
 .form_body {
+    padding: 10px;
     border: 1px solid #938493;
+}
+
+.form_button {
+    margin: 5px;
+    width: 135px;
+    padding: 5px 10px;
+    background-color: #FFB622;
+    box-shadow: 5px 2px 12px #888888;
+    border-radius: 5px;
+    color: #7B8B9D;
 }
